# MouseClicker

./: CMakeLists.txt  README.md
.github/: copilot-instructions.md
doc/: README-english.md
include/: AskKey.h  Click.h
src/: AskKey.cpp  Click.cpp  main.cpp
